--- a/FE-U2-S2-L2-Esercizio.html
+++ b/FE-U2-S2-L2-Esercizio.html
@@ -65,101 +65,107 @@
       <a href="#" class="btn btn-primary">Prenota ora</a>
     </header>
 
-    <section>
-      <div class="conatiner">
-        <div class="col-sm-6 card">
-          <div class="row">
-            <div class="col">
-              <img
-                src="/assets/cappadocia, turchia.jpg"
-                class="card-img-top"
-                alt="mongolfiera"
-              />
-              <h5 class="card-title">Turchia</h5>
-              <p class="card-text">
-                Uno dei luoghi più suggestivi in cui fare un giro in mongolfiera
-                è la Cappadocia. I “camini delle fate”, le particolari vette
-                rocciose di questa zona della Turchia, sono talmente
-                affascinanti da essere diventati patrimonio Unesco. Kapadokya
-                Balloons è una delle realtà che organizzano tour da queste
-                parti, con mongolfiere che possono ospitare dai 4 ai 20
-                passeggeri.
-              </p>
-              <a href="#" class="btn btn-primary">Prenota</a>
+    <main>
+      <section>
+        <div class="container text-center">
+          <div class="row align-items-start">
+            <div class="col-sm-6 col-md-4 col-lg-3">
+              <div class="card">
+                <img
+                  src="./assets/cappadocia, turchia.jpg"
+                  class="card-img-top"
+                  alt="mongolfiera"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Turchia</h5>
+                  <p class="card-text">
+                    Uno dei luoghi più suggestivi in cui fare un giro in
+                    mongolfiera è la Cappadocia. I “camini delle fate”, le
+                    particolari vette rocciose di questa zona della Turchia,
+                    sono talmente affascinanti da essere diventati patrimonio
+                    Unesco. Kapadokya Balloons è una delle realtà che
+                    organizzano tour da queste parti, con mongolfiere che
+                    possono ospitare dai 4 ai 20 passeggeri.
+                  </p>
+                  <a href="#" class="btn btn-primary">Prenota</a>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="card d-flex">
-            <div class="col">
-              <img
-                src="/./assets/New-york.jpg"
-                class="card-img-top"
-                alt="mongolfiera"
-              />
-              <div class="card-body">
-                <h5 class="card-title">New-York</h5>
-                <p class="card-text">
-                  New York si trova alla foce del fiume Hudson, sull'Oceano
-                  Atlantico, e comprende 5 distretti. Manhattan, il suo cuore
-                  pulsante, è considerato uno dei poli commerciali, finanziari e
-                  culturali più importanti al mondo. I luoghi più caratteristici
-                  della metropoli sono i grattacieli come l'Empire State
-                  Building e l'estesa zona di Central Park. Il teatro di
-                  Broadway è illuminato dai neon di Times Square.
-                </p>
-                <a href="#" class="btn btn-primary">Prenota</a>
+            <div class="col-sm-6 col-md-4 col-lg-3">
+              <div class="card">
+                <img
+                  src="./assets/New-york.jpg"
+                  class="card-img-top"
+                  alt="new-york-img"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">New-york</h5>
+                  <p class="card-text">
+                    New York si trova alla foce del fiume Hudson, sull'Oceano
+                    Atlantico, e comprende 5 distretti. Manhattan, il suo cuore
+                    pulsante, è considerato uno dei poli commerciali, finanziari
+                    e culturali più importanti al mondo. I luoghi più
+                    caratteristici della metropoli sono i grattacieli come
+                    l'Empire State Building e l'estesa zona di Central Park. Il
+                    teatro di Broadway è illuminato dai neon di Times Square.
+                  </p>
+                  <a href="#" class="btn btn-primary">Prenota</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-3">
+              <div class="card">
+                <img
+                  src="./assets/norvegia.jpg"
+                  class="card-img-top"
+                  alt="Aurora-boreale"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Norvegia</h5>
+                  <p class="card-text">
+                    Una delle esperienze più magiche che la Norvegia possa
+                    regalarti è la manifestazione di questo fenomeno naturale,
+                    come una danza di fasci verdi, blu, rosa, gialli nel cielo
+                    buio. Non sempre però l:&apos;aurora si manifesta: bisogna
+                    essere pazienti ed aspettare ore ed ore nella notte. La
+                    maggior parte dei viaggiatori non sanno in che direzione
+                    andare nella periferia di Tromso perciò si affidano ad
+                    escursioni organizzate da tour operator locali che includono
+                    il trasporto in bus, il falò, le bevande calde e gli snack e
+                    anche fotografie professionali all:&apos;aurora.
+                  </p>
+                  <a href="#" class="btn btn-primary">Prenota</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-3">
+              <div class="card">
+                <img
+                  src="./assets/tanzania.jpg"
+                  class="card-img-top"
+                  alt="Animali"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Tanzania</h5>
+                  <p class="card-text">
+                    Il parco nazionale di Serengeti, patrimonio Unesco, è una
+                    delle mete più interessanti di tutta l:&apos;Africa per i
+                    safari. Zebre, gazzelle, gnu, vivono in libertà e possono
+                    essere osservati durante le migrazioni. A Serengeti è
+                    possibile partecipare a dei safari davvero particolari: il
+                    safari in mongolfiera, per osservare dall:&apos;alto la
+                    ricchezza naturale di un paese in cui i parchi nazionali si
+                    costituiscono un terzo del territorio, compreso quello del
+                    monte Kilimangiaro.
+                  </p>
+                  <a href="#" class="btn btn-primary">Prenota</a>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="card" style="width: 18rem">
-        <div class="col-sm-6">
-          <img
-            src="./assets/norvegia.jpg"
-            class="card-img-top"
-            alt="mongolfiera"
-          />
-          <div class="card-body">
-            <h5 class="card-title">Norvegia</h5>
-            <p class="card-text">
-              Una delle esperienze più magiche che la Norvegia possa regalarti è
-              la manifestazione di questo fenomeno naturale, come una danza di
-              fasci verdi, blu, rosa, gialli nel cielo buio. Non sempre però
-              l:&apos;aurora si manifesta: bisogna essere pazienti ed aspettare
-              ore ed ore nella notte. La maggior parte dei viaggiatori non sanno
-              in che direzione andare nella periferia di Tromso perciò si
-              affidano ad escursioni organizzate da tour operator locali che
-              includono il trasporto in bus, il falò, le bevande calde e gli
-              snack e anche fotografie professionali all:&apos;aurora.
-            </p>
-            <a href="#" class="btn btn-primary">Prenota</a>
-          </div>
-        </div>
-      </div>
-      <div class="card d-flex" style="width: 18rem">
-        <div class="col">
-          <img
-            src="./assets/tanzania.jpg"
-            class="card-img-top"
-            alt="mongolfiera"
-          />
-          <div class="card-body">
-            <h5 class="card-title">Tanzania</h5>
-            <p class="card-text">
-              Il parco nazionale di Serengeti, patrimonio Unesco, è una delle
-              mete più interessanti di tutta l:&apos;Africa per i safari. Zebre,
-              gazzelle, gnu, vivono in libertà e possono essere osservati
-              durante le migrazioni. A Serengeti è possibile partecipare a dei
-              safari davvero particolari: il safari in mongolfiera, per
-              osservare dall:&apos;alto la ricchezza naturale di un paese in cui
-              i parchi nazionali si costituiscono un terzo del territorio,
-              compreso quello del monte Kilimangiaro.
-            </p>
-            <a href="#" class="btn btn-primary">Prenota</a>
-          </div>
-        </div>
-      </div>
-    </section>
+      </section>
+    </main>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
