--- a/FE-U2-S2-L2-Esercizio.html
+++ b/FE-U2-S2-L2-Esercizio.html
@@ -59,18 +59,21 @@
         </div>
       </div>
     </nav>
-    <header class="bg-light p-5">
+    <header class="bg-danger border border-bottom-1 text-white mb-5 p-5">
       <h1>Eveline-R - <small> Feel the freedom</small></h1>
       <p class="fst-italic">Scopri le destinazioni più calde del momento!</p>
-      <a href="#" class="btn btn-primary">Prenota ora</a>
+      <a href="#" class="btn btn-secondary border border-1 text-white"
+        >Prenota ora</a
+      >
     </header>
 
     <main>
       <section>
-        <div class="container text-center">
+        <div class="container">
+          <h2 class="text-black">Saldi</h2>
           <div class="row align-items-start">
             <div class="col-sm-6 col-md-4 col-lg-3">
-              <div class="card">
+              <div class="card shadow mb-5 bg-body-black">
                 <img
                   src="./assets/cappadocia, turchia.jpg"
                   class="card-img-top"
@@ -78,21 +81,18 @@
                 />
                 <div class="card-body">
                   <h5 class="card-title">Turchia</h5>
-                  <p class="card-text">
-                    Uno dei luoghi più suggestivi in cui fare un giro in
-                    mongolfiera è la Cappadocia. I “camini delle fate”, le
-                    particolari vette rocciose di questa zona della Turchia,
-                    sono talmente affascinanti da essere diventati patrimonio
-                    Unesco. Kapadokya Balloons è una delle realtà che
-                    organizzano tour da queste parti, con mongolfiere che
-                    possono ospitare dai 4 ai 20 passeggeri.
+                  <p class="card-text fs-5">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Unde enim voluptate porro voluptatibus consectetur impedit
+                    quas animi, velit minima eos nemo fuga perferendis. Neque
+                    nobis, eum totam modi ratione ipsa!
                   </p>
-                  <a href="#" class="btn btn-primary">Prenota</a>
+                  <a href="#" class="btn btn-danger text-white">Prenota</a>
                 </div>
               </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3">
-              <div class="card">
+              <div class="card shadow mb-5 bg-body-tertiary">
                 <img
                   src="./assets/New-york.jpg"
                   class="card-img-top"
@@ -100,21 +100,18 @@
                 />
                 <div class="card-body">
                   <h5 class="card-title">New-york</h5>
-                  <p class="card-text">
-                    New York si trova alla foce del fiume Hudson, sull'Oceano
-                    Atlantico, e comprende 5 distretti. Manhattan, il suo cuore
-                    pulsante, è considerato uno dei poli commerciali, finanziari
-                    e culturali più importanti al mondo. I luoghi più
-                    caratteristici della metropoli sono i grattacieli come
-                    l'Empire State Building e l'estesa zona di Central Park. Il
-                    teatro di Broadway è illuminato dai neon di Times Square.
+                  <p class="card-text fs-5">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Unde enim voluptate porro voluptatibus consectetur impedit
+                    quas animi, velit minima eos nemo fuga perferendis. Neque
+                    nobis, eum totam modi ratione ipsa!
                   </p>
-                  <a href="#" class="btn btn-primary">Prenota</a>
+                  <a href="#" class="btn btn-danger text-white">Prenota</a>
                 </div>
               </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3">
-              <div class="card">
+              <div class="card shadow mb-5 bg-body-tertiary">
                 <img
                   src="./assets/norvegia.jpg"
                   class="card-img-top"
@@ -122,24 +119,18 @@
                 />
                 <div class="card-body">
                   <h5 class="card-title">Norvegia</h5>
-                  <p class="card-text">
-                    Una delle esperienze più magiche che la Norvegia possa
-                    regalarti è la manifestazione di questo fenomeno naturale,
-                    come una danza di fasci verdi, blu, rosa, gialli nel cielo
-                    buio. Non sempre però l:&apos;aurora si manifesta: bisogna
-                    essere pazienti ed aspettare ore ed ore nella notte. La
-                    maggior parte dei viaggiatori non sanno in che direzione
-                    andare nella periferia di Tromso perciò si affidano ad
-                    escursioni organizzate da tour operator locali che includono
-                    il trasporto in bus, il falò, le bevande calde e gli snack e
-                    anche fotografie professionali all:&apos;aurora.
+                  <p class="card-text fs-5">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Unde enim voluptate porro voluptatibus consectetur impedit
+                    quas animi, velit minima eos nemo fuga perferendis. Neque
+                    nobis, eum totam modi ratione ipsa!
                   </p>
-                  <a href="#" class="btn btn-primary">Prenota</a>
+                  <a href="#" class="btn btn-danger text-white">Prenota</a>
                 </div>
               </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3">
-              <div class="card">
+              <div class="card shadow mb-5 bg-body-tertiary">
                 <img
                   src="./assets/tanzania.jpg"
                   class="card-img-top"
@@ -147,23 +138,154 @@
                 />
                 <div class="card-body">
                   <h5 class="card-title">Tanzania</h5>
-                  <p class="card-text">
-                    Il parco nazionale di Serengeti, patrimonio Unesco, è una
-                    delle mete più interessanti di tutta l:&apos;Africa per i
-                    safari. Zebre, gazzelle, gnu, vivono in libertà e possono
-                    essere osservati durante le migrazioni. A Serengeti è
-                    possibile partecipare a dei safari davvero particolari: il
-                    safari in mongolfiera, per osservare dall:&apos;alto la
-                    ricchezza naturale di un paese in cui i parchi nazionali si
-                    costituiscono un terzo del territorio, compreso quello del
-                    monte Kilimangiaro.
+                  <p class="card-text fs-5">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Unde enim voluptate porro voluptatibus consectetur impedit
+                    quas animi, velit minima eos nemo fuga perferendis. Neque
+                    nobis, eum totam modi ratione ipsa!
                   </p>
-                  <a href="#" class="btn btn-primary">Prenota</a>
+                  <a href="#" class="btn btn-danger text-white">Prenota</a>
                 </div>
               </div>
             </div>
           </div>
         </div>
+        <div class="container">
+          <h2 class="text-black">Welcome summer</h2>
+          <div class="row align-items-start">
+            <div class="col-sm-6 col-md-6 col-lg-4">
+              <div class="card shadow mb-5 bg-body-black">
+                <img
+                  src="./assets/maldive.jpg"
+                  class="card-img-top"
+                  alt="mongolfiera"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Maldive</h5>
+                  <p class="card-text fs-5">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Unde enim voluptate porro voluptatibus consectetur impedit
+                    quas animi, velit minima eos nemo fuga perferendis. Neque
+                    nobis, eum totam modi ratione ipsa!
+                  </p>
+                  <a href="#" class="btn btn-danger text-white">Prenota</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-4">
+              <div class="card shadow mb-5 bg-body-black">
+                <img
+                  src="./assets/maldive.jpg"
+                  class="card-img-top"
+                  alt="mongolfiera"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Maldive</h5>
+                  <p class="card-text fs-5">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Unde enim voluptate porro voluptatibus consectetur impedit
+                    quas animi, velit minima eos nemo fuga perferendis. Neque
+                    nobis, eum totam modi ratione ipsa!
+                  </p>
+                  <a href="#" class="btn btn-danger text-white">Prenota</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-4">
+              <div class="card shadow mb-5 bg-body-black">
+                <img
+                  src="./assets/maldive.jpg"
+                  class="card-img-top"
+                  alt="mongolfiera"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Maldive</h5>
+                  <p class="card-text fs-5">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Unde enim voluptate porro voluptatibus consectetur impedit
+                    quas animi, velit minima eos nemo fuga perferendis. Neque
+                    nobis, eum totam modi ratione ipsa!
+                  </p>
+                  <a href="#" class="btn btn-danger text-white">Prenota</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-4">
+              <div class="card shadow mb-5 bg-body-black">
+                <img
+                  src="./assets/maldive.jpg"
+                  class="card-img-top"
+                  alt="mongolfiera"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Maldive</h5>
+                  <p class="card-text fs-5">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Unde enim voluptate porro voluptatibus consectetur impedit
+                    quas animi, velit minima eos nemo fuga perferendis. Neque
+                    nobis, eum totam modi ratione ipsa!
+                  </p>
+                  <a href="#" class="btn btn-danger text-white">Prenota</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-4">
+              <div class="card shadow mb-5 bg-body-black">
+                <img
+                  src="./assets/maldive.jpg"
+                  class="card-img-top"
+                  alt="mongolfiera"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Maldive</h5>
+                  <p class="card-text fs-5">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Unde enim voluptate porro voluptatibus consectetur impedit
+                    quas animi, velit minima eos nemo fuga perferendis. Neque
+                    nobis, eum totam modi ratione ipsa!
+                  </p>
+                  <a href="#" class="btn btn-danger text-white">Prenota</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-4">
+              <div class="card shadow mb-5 bg-body-black">
+                <img
+                  src="./assets/maldive.jpg"
+                  class="card-img-top"
+                  alt="mongolfiera"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Maldive</h5>
+                  <p class="card-text fs-5">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Unde enim voluptate porro voluptatibus consectetur impedit
+                    quas animi, velit minima eos nemo fuga perferendis. Neque
+                    nobis, eum totam modi ratione ipsa!
+                  </p>
+                  <a href="#" class="btn btn-danger text-white">Prenota</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <article>
+          <div class="container">
+            <h2 class="text-black p-3">Offerta del giorno</h2>
+            <div class="row align-items-start">
+              <div class="col">
+                <img src="./assets/maldive.jpg" width="300" height="300" />
+              </div>
+              <div class="col">
+                <h1 class="text-primary fs-2">Fushifaru Maldives</h1>
+                <p class="fs-4 p-">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem
+                  ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+              </div>
+            </div>
+          </div>
+        </article>
       </section>
     </main>
 
